--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+	<th>ID</th>
     <th>Udid</th>
     <th></th>
     <th></th>
@@ -10,6 +11,7 @@
 
 <% @users.each do |user| %>
   <tr>
+	<td><%= user.id %></td>
     <td><%= user.udid %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
