--- a/app/views/photo_reflections/_form.html.erb
+++ b/app/views/photo_reflections/_form.html.erb
@@ -11,10 +11,16 @@
     </div>
   <% end %>
 
-  <div class="field">
+	<div class="field">
+    <%= f.label :udid %><br />
+    <%= f.text_field :udid %>
+  </div>
+
+	<div class="field">
     <%= f.label :user_id %><br />
     <%= f.text_field :user_id %>
   </div>
+
   <div class="field">
     <%= f.label :data %><br />
     <%= f.file_field("uploaded_picture") %>
