--- a/app/views/text_reflections/_form.html.erb
+++ b/app/views/text_reflections/_form.html.erb
@@ -11,6 +11,11 @@
     </div>
   <% end %>
 
+	<div class="field">
+    <%= f.label :udid %><br />
+    <%= f.text_field :udid %>
+  </div>
+
   <div class="field">
     <%= f.label :user_id %><br />
     <%= f.text_field :user_id %>
