Bugfixes to Daily Suggestions

--- a/app/views/daily_suggestions/_form.html.erb
+++ b/app/views/daily_suggestions/_form.html.erb
@@ -20,10 +20,17 @@
     <%= f.label :user_id %><br />
     <%= f.text_field :user_id %>
   </div>
+
+  <div class="field">
+    <%= f.label :theme %><br />
+    <%= f.text_field :theme %>
+  </div>
+
   <div class="field">
     <%= f.label :suggestion_id %><br />
     <%= f.text_field :suggestion_id %>
   </div>
+
 	<div class="field">
     <%= f.label :time_entered %><br />
     <%= f.text_field :time_entered %>
